<resources>
    <string name="app_name">Puerta sonora</string>
    <string name="main_screen_title">Nueva clave</string>
    <string name="main_screen_subtitle">Podés comenzar a grabar la clave sonora a continuación. Tardarás solo cinco segundos.</string>
    <string name="main_button_text">Comencemos</string>
    <string name="door_control_title">Control de la puerta</string>
    <string name="txt_open_door">Abrir puerta</string>
    <string name="txt_close_door">Cerrar puerta</string>
    <string name="txt_change_password">Modificar contraseña</string>
    <string name="txt_confirm_password_button">CONFIRMAR</string>
    <string name="txt_repeat_password_button">REINTENTAR</string>
    <string name="select_record_method_title">Generacion de la clave sonora</string>
    <string name="select_record_method_subtitle">Podes optar entre 2 sensores distintos del celular: el acelerometro o el microfono</string>
    <string name="txt_select_accelerometer_button">Acelerometro</string>
    <string name="txt_select_microphone_button">Microfono</string>
    <string name="txt_modify_password_button">Modificar</string>
    <string name="txt_current_password">ESCUCHAR CONTRASEÑA</string>
</resources>
