<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryLight"
    android:padding="@dimen/global_padding"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/txt_main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/main_title_font_size"
        android:text="@string/main_screen_title"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/txt_main_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subtitle_font_size"
        android:text="@string/main_screen_subtitle"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"/>

    <RelativeLayout
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_width="match_parent">

        <ImageView
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:src="@drawable/door"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_main"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:textSize="17dp"
        android:background="@drawable/rounded_button"
        android:text="@string/main_button_text"
        android:onClick="handleBeginButton"
        android:textColor="@color/colorWhite"/>

</LinearLayout>