<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/global_padding"
        android:paddingRight="@dimen/global_padding"
        android:paddingLeft="@dimen/global_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/main_title_font_size"
            android:text="@string/door_control_title"/>

    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_width="match_parent">

        <ImageView
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:src="@drawable/door"/>

    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_regular_height"
        android:text="@string/txt_open_door"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/subtitle_font_size"
        android:backgroundTint="@color/colorAccent"
        android:onClick="onOpenDoorClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_regular_height"
        android:text="@string/txt_close_door"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/subtitle_font_size"
        android:backgroundTint="@color/colorDanger"
        android:onClick="onCloseDoorClick"/>


</LinearLayout>
